Added code for python lab and some fixes for the bash lab

--- a/01-iosxr-01-cli-automation-bash/ztp_bash/ansible/playbook.yml
+++ b/01-iosxr-01-cli-automation-bash/ztp_bash/ansible/playbook.yml
@@ -16,4 +16,5 @@
     shell: source /pkg/bin/ztp_helper.sh && xrcmd "show configuration running-config interface loopback2"
     register: output 
 
-  - debug: msg=output.stdout_lines
+  - debug: 
+        var: output.stdout_lines
